# Modulator

./: CMakeLists.txt  README.md
Include/: Modulator.h
Lib/: CMakeLists.txt
Lib/Include/: Mapper.h  dsp_module.h  shaping_impulse.h
Lib/Source/: Mapper.cpp  dsp_module.cpp  shaping_impulse.cpp
Source/: Modulator.cpp
